# polaris

./: .gitignore  Cargo.toml  display.py
scripts/: README.md  actions_app.py  audio_digest.py  busy_ics_export.py  digest.py  display.py  gcal_upload.py  gtasks_upload.py  ics_export.py  items_to_list.py  redact_busy.py  sched.py
scripts/actions_app/: index.html  index.js  tailwind.css
src/: cli.rs  main.rs  views.rs
src/extractors/: crunch_points.rs  daily_notes.rs  events.rs  mod.rs  people_dates.rs  projects.rs  sort.rs  stacks.rs  tasks.rs  tickles.rs  waiting.rs
src/parse/: action_item.rs  fetch.rs  mod.rs  node.rs  repeat.rs
src/parse/goals/: mod.rs  personal.rs
