[package]
name = "starling-interact"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bincode = "1.3.3"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
crossterm = "0.28.1"
orgish = { git = "https://github.com/arctic-hen7/orgish", version = "0.1.0", features = ["serde"] }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.10", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
