[package]
name = "polaris"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bincode = "1.3.3"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
orgish = { git = "https://github.com/arctic-hen7/orgish", version = "0.1.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellwords = "1.1.0"
ureq = { version = "3.0.10", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
